--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
+
 [submodule "production/themes/PaperMod"]
 	path = production/themes/PaperMod
-	url = https://github.com/adityatelange/hugo-PaperMod
-[submodule "production/themes/ananke"]
-	path = production/themes/ananke
-	url = https://github.com/theNewDynamic/gohugo-theme-ananke
+	url = https://github.com/adityatelange/hugo-PaperMod.git
